--- a/src/components/znkChat/main.scss
+++ b/src/components/znkChat/main.scss
@@ -1,6 +1,7 @@
 @import './src/scss/imports/variables',
 './src/scss/imports/colors',
 './src/scss/imports/mixins',
+'./src/scss/general',
 'scss/chat-participants',
 'scss/chat-board',
 'scss/chatter',
