--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -47,6 +47,8 @@ $bgColor27 : #dbb910;
 $bgColor28 : #8abec4;
 $bgColor29 : #e1b688;
 $bgColor30 : #e1e1e1;
+$bgColor31 : #757a83;
+$bgColor32 : #f9f9f9;
 
 //border color
 $bcColor1: #87ca4d;
@@ -76,6 +78,8 @@ $tbgColor7: rgba(15, 15, 15, 0.85);
 
 //box shadow
 $bsColor1 : rgba(0, 0, 0, 0.37);
+$bsColor2 : rgba(0, 0, 0, 0.1);
+
 /*
 //backgrounds
 $greyBG1: #B4BAD9;
