--- a/src/components/znkChat/scss/_chat-message.scss
+++ b/src/components/znkChat/scss/_chat-message.scss
@@ -1,6 +1,6 @@
 chat-message {
     .message-wrapper {
-        @include text-style(14px, $fcColor6, Lato, $regularFontWeight);  // todo- get correct style
+        @include text-style(14px, $fcColor6, Lato, $regularFontWeight);
         text-align: center;
         box-sizing: border-box;
 
@@ -17,12 +17,17 @@ chat-message {
                 bottom: -7px;
             }
         }
+
+        .message-date{
+            @include text-style(12px, $fcColor16, Lato, $regularFontWeight);
+
+        }
     }
 
     &.myMessage {
         .message-wrapper .message {
             @include text-style(14px, $fcColor2, Lato, $regularFontWeight);
-            background-color: $bgColor2; // todo --------------------------------
+            background-color: $bgColor2;
             float: right;
 
             .bottom-triangle{
@@ -38,11 +43,11 @@ chat-message {
     &.otherMessage {
         .message-wrapper .message {
             @include text-style(14px, $fcColor6, Lato, $regularFontWeight);
-            background-color: lightgray; // todo --------------------------------
+            background-color: $bgColor17;
             float: left;
 
             .bottom-triangle{
-                border-top: 12px solid lightgray; // todo --------------------------------
+                border-top: 12px solid $bcColor11;
                 left: 8px;
                 transform: rotate(25deg);
                 border-left: 3px solid transparent;
