--- a/src/components/znkChat/scss/_chatter.scss
+++ b/src/components/znkChat/scss/_chatter.scss
@@ -4,26 +4,30 @@
 
     .online-indicator {
         @include dimension(7px, 7px);
-        border: 2px solid gray;
+        border: 1px solid $bcColor5;
         border-radius: 6px;
+        box-sizing: border-box;
         margin-right: 13px;
     }
 
     &.online {
         .online-indicator {
-            background: $bgColor2
+            background: $bgColor2;
+            border:none;
         }
     }
 
     &.idle{
         .online-indicator {
             background: $bgColor27;
+            border:none;
         }
     }
 
     &.offline {
         .chatter-name {
             font-family: $fcColor6;
+            border:none;
         }
     }
 
@@ -33,8 +37,11 @@
     }
 
     .message-not-seen{
-        @include dimension(15px,15px);
+        @include dimension(auto, 15px);
         @include text-style(10px, $fcColor2, Lato, $regularFontWeight);
+        min-width: 15px;
+        padding: 5px;
+        box-sizing: border-box;
         line-height: 15px;
         transition: 0.2s;
         display: flex;
@@ -44,6 +51,15 @@
         border-radius: 50px;
         background-color: $bgColor1;
     }
+
+    .message-not-seen.ten-or-more-unseen-messages::after {
+        content: ' +';
+    }
+
+    .ten-or-more-unseen-messages{
+        right:-10px;
+    }
+
     .message-not-seen.ng-enter,
     .message-not-seen.ng-leave.ng-leave-active {
         opacity:0;
