--- a/src/components/znkChat/templates/chatParticipants.template.html
+++ b/src/components/znkChat/templates/chatParticipants.template.html
@@ -1,20 +1,24 @@
 <div class="chat-participants">
     <div class="my-chat-title" translate=".MY_CHAT"></div>
 
-    <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr ">
-        <div ng-click="d.selectChatter()(chatter)">
-            <chatter
-                set-first-chatter="$index === 0 ? d.selectChatter()(chatter) : angular.noop"
-                chat-data="d.chatData"
-                local-user="d.chatData.localUser"
-                local-user-chats-guids-arr="d.chatData.localUserChatsGuidsArr"
-                chatter-obj="chatter">
-            </chatter>
+    <div class="chatter-repeater-wrapper znk-scrollbar">
+        <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr ">
+            <div class="chatter-drv-wrapper"
+                 ng-click="d.selectChatter()(chatter); d.selctedChatter = $index;"
+                 ng-class="{'selected-chatter': d.selctedChatter === $index}">
+                <chatter
+                    set-first-chatter="$index === 0 ? d.selectChatter()(chatter) : angular.noop"
+                    chat-data="d.chatData"
+                    local-user="d.chatData.localUser"
+                    local-user-chats-guids-arr="d.chatData.localUserChatsGuidsArr"
+                    chatter-obj="chatter">
+                </chatter>
+            </div>
         </div>
-    </div>
 
-    <div class="support-chat-wrapper">
-        <div class="online-indicator online"></div>
-        <div class="support" translate=".SUPPORT"></div>
+        <div class="support-chat-wrapper">
+            <div class="online-indicator online"></div>
+            <div class="support" translate=".SUPPORT"></div>
+        </div>
     </div>
 </div>
