--- a/src/components/znkChat/templates/chatter.template.html
+++ b/src/components/znkChat/templates/chatter.template.html
@@ -4,5 +4,9 @@
      'idle': chatterObj.presence === vm.userStatus.IDLE}">
     <div class="online-indicator"></div>
     <div class="chatter-name">{{chatterObj.name}}</div>
-    <div class="message-not-seen" ng-if="chatterObj.messagesNotSeen > 0">{{chatterObj.messagesNotSeen}}</div>
+    <div class="message-not-seen"
+         ng-class="{'ten-or-more-unseen-messages': chatterObj.messagesNotSeen > 9}"
+         ng-if="chatterObj.messagesNotSeen > 0 > 0">
+        {{chatterObj.messagesNotSeen}}
+    </div>
 </div>
