--- a/src/components/znkChat/templates/chatter.template.html
+++ b/src/components/znkChat/templates/chatter.template.html
@@ -6,7 +6,7 @@
     <div class="chatter-name">{{chatterObj.name}}</div>
     <div class="message-not-seen"
          ng-class="{'ten-or-more-unseen-messages': chatterObj.messagesNotSeen > 9}"
-         ng-if="chatterObj.messagesNotSeen > 0 > 0">
+         ng-if="chatterObj.messagesNotSeen > 0">
         {{chatterObj.messagesNotSeen}}
     </div>
 </div>
