--- a/src/components/znkChat/templates/znkChat.template.html
+++ b/src/components/znkChat/templates/znkChat.template.html
@@ -1,7 +1,7 @@
 <div class="znk-chat-wrapper" ng-switch="d.chatStateView" translate-namespace="ZNK_CHAT">
     <div class="button-wrapper" ng-show="d.chatStateView === statesView.CHAT_BUTTON_VIEW" ng-click="d.openChat()">
         <div class="unseen-messages"
-             ng-class="{'ten-or-more-unseen-messages': d.numOfNotSeenMessages > 9}"
+             ng-class="{'ten-or-more-unseen-messages': d.numOfNotSeenMessages >=  d.maxNumUnseenMessages}"
              ng-if="d.numOfNotSeenMessages > 0">
             {{d.numOfNotSeenMessages}}
         </div>
