--- a/src/components/znkChat/scss/_znk-chat.scss
+++ b/src/components/znkChat/scss/_znk-chat.scss
@@ -1,64 +1,78 @@
 .znk-chat-wrapper {
     .button-wrapper {
         @include dimension(45px, 45px);
+        transition: linear 0.13s;
         position: relative;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 35px ;
+        border-radius: 35px;
         background-color: $bgColor17;
 
-        .unseen-messages{
+        .unseen-messages {
             @include dimension(auto, 15px);
             @include text-style(12px, $fcColor2, Lato, $regularFontWeight);
+            transition: 0.5s;
             min-width: 15px;
             padding: 5px;
             box-sizing: border-box;
-            transition: 0.3s;
             display: flex;
             align-items: center;
             justify-content: center;
             border-radius: 50px;
             position: absolute;
-            top:0;
-            right:1px;
+            top: -1px;
+            right: 1px;
             background-color: $bgColor1;
         }
 
         .unseen-messages.ten-or-more-unseen-messages::after {
-            content: ' +';
+            content: '+';
         }
 
         .ten-or-more-unseen-messages{
-          right:-10px;
-        }
-
-        .unseen-messagesmessages.ng-enter,
-        .unseen-messages.ng-leave.ng-leave-active {
-            opacity: 0;
-        }
-
-        .unseen-messages.ng-leave,
-        .unseen-messages.ng-enter.ng-enter-active {
-            opacity: 1;
+            right:-10px;
         }
 
         svg {
-            @include dimension(25px, 25px);
+            path {
+                fill: $bgColor31;
+            }
         }
     }
 
     .chat-container {
         @include dimension(525px, 372px);
+        overflow: hidden;
+        transition: linear 0.2s;
         display: flex;
-        border-radius: 15px 15px 0 0 ;
-        box-shadow:  0 -2px 3px 0 $bsColor2;
-
+        border-radius: 15px 15px 0 0;
+        box-shadow: 0 -2px 3px 0 $bsColor2;
 
         .chat-messages-board {
             @include dimension(200px, 275px);
             border-radius: 15px;
         }
+    }
+
+    .unseen-messagesmessages.ng-enter,
+    .unseen-messages.ng-leave.ng-leave-active {
+        opacity: 0;
+    }
+
+    .unseen-messages.ng-leave,
+    .unseen-messages.ng-enter.ng-enter-active {
+        opacity: 1;
+    }
+
+    .chat-container.ng-hide {
+        @include dimension(45px, 45px);
+        overflow: hidden;
+        border-radius: 200px;
+    }
+
+    .button-wrapper.ng-hide-add, .button-wrapper.ng-hide-remove {
+        opacity: 0;
     }
 }
