--- a/src/components/znkChat/templates/chatParticipants.template.html
+++ b/src/components/znkChat/templates/chatParticipants.template.html
@@ -2,7 +2,13 @@
     <div class="my-chat-title" translate=".MY_CHAT"></div>
 
     <div class="chatter-repeater-wrapper znk-scrollbar">
-        <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr ">
+
+        <div class="support-chat-wrapper">
+            <div class="online-indicator online"></div>
+            <div class="support" translate=".SUPPORT"></div>
+        </div>
+
+        <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr | orderBy:'name' | orderBy:'-messagesNotSeen'">
             <div class="chatter-drv-wrapper"
                  ng-click="d.selectChatter()(chatter); d.selctedChatter = $index;"
                  ng-class="{'selected-chatter': d.selctedChatter === $index}">
@@ -16,9 +22,5 @@
             </div>
         </div>
 
-        <div class="support-chat-wrapper">
-            <div class="online-indicator online"></div>
-            <div class="support" translate=".SUPPORT"></div>
-        </div>
     </div>
 </div>
