--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -1,6 +1,6 @@
 //font color
 $fcColor1: #363636;
-$fcColor2: #fff;
+$fcColor2: #ffffff;
 $fcColor3: #ff6766;
 $fcColor4: #2AB79E;
 $fcColor5: #0a9bad;
@@ -13,6 +13,10 @@ $fcColor11: #cccccc;
 $fcColor12: #d2d2d2;
 $fcColor13 : #979797;
 $fcColor14 : #161616;
+$fcColor15 : #659938;
+$fcColor16 : #CACBCC;
+$fcColor17 : #D1D2D2;
+$fcColor18 : #E1E1E1;
 
 //background color
 $bgColor1: #ff6766;
@@ -44,6 +48,11 @@ $bgColor26 : #464646;
 $bgColor27 : #dbb910;
 $bgColor28 : #8abec4;
 $bgColor29 : #e1b688;
+$bgColor30 : #c95050;
+$bgColor31 : #252525;
+$bgColor32 : #037684;
+$bgColor33 : rgba(255, 255, 255, 0.8);
+$bgColor34 : #76b63e;
 
 //border color
 $bcColor1: #87ca4d;
@@ -68,6 +77,9 @@ $tbgColor4: rgba(0, 0, 0, 0.08);
 $tbgColor5: rgba(255, 255, 255, 0.3);
 $tbgColor6: rgba(255, 255, 255, 0.08);
 $tbgColor7: rgba(15, 15, 15, 0.85);
+
+/* box shadow */
+$bsColor1: #72ab40;
 
 /*
 //backgrounds
