--- a/src/components/znkChat/templates/chatParticipants.template.html
+++ b/src/components/znkChat/templates/chatParticipants.template.html
@@ -1,19 +1,26 @@
 <div class="chat-participants">
     <div class="my-chat-title" translate=".MY_CHAT"></div>
 
+    <div class="chatter-drv-wrapper support-chat-wrapper"
+         ng-click="d.selectChatter()(d.chatData.support); d.selctedChatter = -1;"
+         ng-if="d.chatData.support && d.chatData.support.uid"
+         ng-class="{'selected-chatter': d.selctedChatter === -1}">
+        <chatter
+            set-first-chatter="d.selectChatter()(d.chatData.support)"
+            chat-data="d.chatData"
+            local-user="d.chatData.localUser"
+            local-user-chats-guids-arr="d.chatData.localUserChatsGuidsArr"
+            chatter-obj="d.chatData.support">
+        </chatter>
+    </div>
+
     <div class="chatter-repeater-wrapper znk-scrollbar">
-
-        <div class="support-chat-wrapper">
-            <div class="online-indicator online"></div>
-            <div class="support" translate=".SUPPORT"></div>
-        </div>
-
         <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr | orderBy:'name' | orderBy:'-messagesNotSeen'">
             <div class="chatter-drv-wrapper"
                  ng-click="d.selectChatter()(chatter); d.selctedChatter = $index;"
                  ng-class="{'selected-chatter': d.selctedChatter === $index}">
                 <chatter
-                    set-first-chatter="$index === 0 ? d.selectChatter()(chatter) : angular.noop"
+                    set-first-chatter="angular.noop"
                     chat-data="d.chatData"
                     local-user="d.chatData.localUser"
                     local-user-chats-guids-arr="d.chatData.localUserChatsGuidsArr"
@@ -21,6 +28,5 @@
                 </chatter>
             </div>
         </div>
-
     </div>
 </div>
