--- a/src/components/znkQuestionReport/templates/znkReport.template.html
+++ b/src/components/znkQuestionReport/templates/znkReport.template.html
@@ -3,7 +3,7 @@
         <div class="top-icon-wrap">
             <div class="top-icon">
                 <div class="round-icon-wrap">
-                    <svg-icon name="report-icon"></svg-icon>
+                    <svg-icon name="report-question-icon"></svg-icon>
                 </div>
             </div>
         </div>
