--- a/src/components/znkChat/templates/chatBoard.template.html
+++ b/src/components/znkChat/templates/chatBoard.template.html
@@ -1,7 +1,7 @@
 <div class="chat-board-wrapper">
     <div class="chat-board-header">
         <chatter ng-if="chatterObj.uid" chatter-obj="chatterObj"></chatter>
-        <svg-icon name="znk-chat-close-icon" ng-click="d.closeChat()()"></svg-icon>
+        <svg-icon name="znk-chat-close-icon" ng-click="d.closeChat()"></svg-icon>
     </div>
     <div class="board-wrapper">
         <div class="messages-container">
