--- a/src/components/znkChat/templates/chatParticipants.template.html
+++ b/src/components/znkChat/templates/chatParticipants.template.html
@@ -2,9 +2,9 @@
     <div class="my-chat-title" translate=".MY_CHAT"></div>
 
     <div class="chatter-drv-wrapper support-chat-wrapper"
-         ng-click="d.selectChatter(d.chatData.support); d.selctedChatter = -1;"
+         ng-click="d.selectChatter(d.chatData.support)"
          ng-if="d.chatData.support && d.chatData.support.uid"
-         ng-class="{'selected-chatter': d.selctedChatter === -1}">
+         ng-class="{'selected-chatter': d.chatData.support.isActive}">
         <chatter
             set-first-chatter="d.selectChatter(d.chatData.support)"
             chat-data="d.chatData"
@@ -17,10 +17,10 @@
     <div class="chatter-repeater-wrapper znk-scrollbar">
         <div class="chatter-repeater" ng-repeat="chatter in d.chatData.chatParticipantsArr | orderBy:'name' | orderBy:'-messagesNotSeen'">
             <div class="chatter-drv-wrapper"
-                 ng-click="d.selectChatter(chatter); d.selctedChatter = $index;"
-                 ng-class="{'selected-chatter': d.selctedChatter === $index}">
+                 ng-click="d.selectChatter(chatter)"
+                 ng-class="{'selected-chatter': chatter.isActive}">
                 <chatter
-                    set-first-chatter="$index === 0 ? d.selectChatter(chatter) : angular.noop"
+                    set-first-chatter="$index === 0 && (!d.chatData.support || !d.chatData.support.uid) ? d.selectChatter(chatter) : null"
                     chat-data="d.chatData"
                     local-user="d.chatData.localUser"
                     local-user-chats-guids-arr="d.chatData.localUserChatsGuidsArr"
