--- a/src/components/znkQuestionReport/scss/_znkReport.scss
+++ b/src/components/znkQuestionReport/scss/_znkReport.scss
@@ -1,8 +1,10 @@
 znk-question-report {
     .report-btn{
-        width: 25px;
-        height: 25px;
+        width: 20px;
+        height: 20px;
         float: right;
+        margin: 10px 30px;
+        outline: none;
         .report-question-icon{
             fill: $fcColor18;
             &:hover {fill: $fcColor5;}
