--- a/src/components/znkQuestionReport/main.scss
+++ b/src/components/znkQuestionReport/main.scss
@@ -1,6 +1,6 @@
 @import '../../scss/imports/colors',
 '../../scss/imports/variables',
-'../../../dist/mixins/_mixins.scss';
+'../../scss/imports/mixins';
 
 @import './scss/tooltip';
 @import './scss/md-dialog';
