--- a/src/components/znkChat/scss/_chatter.scss
+++ b/src/components/znkChat/scss/_chatter.scss
@@ -34,6 +34,9 @@
     .chatter-name {
         @include text-style(16px, $fcColor6, Lato, $regularFontWeight);
         height: 23px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     .message-not-seen{
