--- a/src/components/znkChat/scss/_znk-chat.scss
+++ b/src/components/znkChat/scss/_znk-chat.scss
@@ -49,7 +49,7 @@
         display: flex;
         border-radius: 15px 15px 0 0;
         border: 1px solid $bgColor30;
-        box-shadow: 0 -2px 3px 0 $bsColor1;
+        box-shadow: 0 0 7px 0 $bsColor1;
 
         .chat-messages-board {
             @include dimension(200px, 275px);
