TFL-1275/   Once "Report Question" popup is open, user should not be able to answer question using keyboard

--- a/src/components/znkQuestionReport/templates/znkReport.template.html
+++ b/src/components/znkQuestionReport/templates/znkReport.template.html
@@ -12,7 +12,7 @@
                 <svg-icon name="close-popup"></svg-icon>
             </div>
         </div>
-        <md-dialog-content>
+        <md-dialog-content ng-keyup="vm.stopBubbling($event)">
             <div class="report-inner">
                 <div class="main-title" translate=".REPORT_QUESTION"></div>
                 <ng-switch on="vm.success">
