--- a/src/components/znkProgressBar/znkProgressBar.template.html
+++ b/src/components/znkProgressBar/znkProgressBar.template.html
@@ -12,7 +12,7 @@
 
 <div class="progress-wrap">
     <div class="progress" ng-style="{width: progressWidth + '%'}"></div>
-    <div class="answer-count ng-hide" ng-show="{{::showProgressValue}}" ng-style="{left: progressWidth + '%'}">
+    <div class="answer-count ng-hide" ng-show="{{::showProgressValue}}">
         {{progressValue}}
     </div>
 </div>
