--- a/src/components/znkQuestionReport/templates/znkReport.template.html
+++ b/src/components/znkQuestionReport/templates/znkReport.template.html
@@ -12,7 +12,7 @@
                 <svg-icon name="close-popup"></svg-icon>
             </div>
         </div>
-        <md-dialog-content ng-keyup="vm.stopBubbling($event)">
+        <md-dialog-content>
             <div class="report-inner">
                 <div class="main-title" translate=".REPORT_QUESTION"></div>
                 <ng-switch on="vm.success">
@@ -21,8 +21,10 @@
                         <form novalidate name="vm.reportForm" class="base-form" ng-submit="vm.sendFrom();">
 
 							<textarea
-                                    required
+                                    required autofocus
+                                    id="report-textarea"
                                     name="messageFeedback"
+                                    ng-keydown="vm.stopBubbling($event)"
                                     ng-model="vm.reportData.message"
                                     placeholder="{{'REPORT_POPUP.PLACEHOLDER' | translate}}">
                             </textarea>
@@ -37,6 +39,7 @@
                                     type="email"
                                     name="emailFeedback"
                                     placeholder="{{'REPORT_POPUP.EMAIL' | translate}}"
+                                    ng-keydown="vm.stopBubbling($event)"
                                     ng-model="vm.reportData.email"
                                     ng-minlength="5"
                                     ng-maxlength="254">
