TFL-1272 - Exercise container scroll should be on the right side of the report icon. fixed TFL-1273 - Make a "Report Question" icon smaller. fixed TFL-1279 - Remove group data area horizontal scroll. fixed TFL-1286 - Default message: remove space at the beginning of the 2 line.. fixed

--- a/src/components/znkQuestionReport/scss/_znkReport.scss
+++ b/src/components/znkQuestionReport/scss/_znkReport.scss
@@ -2,11 +2,11 @@ znk-question-report {
     .report-btn{
         width: 15px;
         height: 15px;
-        outline: none;
         cursor: pointer;
+        outline: none;
         position: absolute;
-        top: -6px;
-        right: 0;
+        top: 15px;
+        right: 30px;
         .report-question-icon{
             fill: $fcColor20;
             &:hover {fill: $fcColor5;}
