remove ng-if from znkExercise

--- a/src/components/znkExercise/core/template/questionSwiperDesktopTemplate.html
+++ b/src/components/znkExercise/core/template/questionSwiperDesktopTemplate.html
@@ -6,7 +6,7 @@
             disable-swipe="{{vm.isLocked}}">
     <div class="swiper-slide"
         ng-repeat="question in vm.questions">
-        <znk-question-report report-data="question" ng-if="question.parentTypeId !== vm.exerciseTypeEnum.LECTURE.enum"></znk-question-report>
+        <znk-question-report report-data="question"></znk-question-report>
         <question-builder question="question"
                           rate-answer-formatter-parser
                           ng-model="question.__questionStatus.userAnswer"
