--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -75,6 +75,7 @@ $bcColor12 : #cccccc;
 $bcColor13 : #4f4d4d;
 $bcColor14 : #acacac;
 $bcColor15 : #e1e1e1;
+$bcColor16 : #c2c2c2;
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
