scroll to last message

--- a/src/components/znkChat/templates/chatBoard.template.html
+++ b/src/components/znkChat/templates/chatBoard.template.html
@@ -19,6 +19,7 @@
         </div>
 
         <textarea class="chat-textarea"
+            ng-focus="true"
             placeholder="{{ 'ZNK_CHAT.PLACEHOLDER' | translate }}"
             ng-keydown="d.sendMessage($event)"
             ng-model="d.newMessage">
