--- a/src/components/znkChat/templates/znkChat.template.html
+++ b/src/components/znkChat/templates/znkChat.template.html
@@ -16,6 +16,7 @@
         </chat-participants>
 
         <chat-board
+            actions="d.actions"
             user-id="localUser.uid"
             close-chat="d.closeChat"
             chatter-obj="d.selectedChatter">
