--- a/src/components/znkQuestionReport/templates/znkReport.template.html
+++ b/src/components/znkQuestionReport/templates/znkReport.template.html
@@ -9,7 +9,7 @@
         </div>
         <div class="popup-header">
             <div class="close-popup-wrap" ng-click="vm.cancel();">
-                <svg-icon name="close-popup"></svg-icon>
+                <svg-icon name="report-question-close-popup"></svg-icon>
             </div>
         </div>
         <md-dialog-content>
