hide seconds text

--- a/src/components/general/templates/timerDrv.html
+++ b/src/components/general/templates/timerDrv.html
@@ -6,7 +6,7 @@
     <div ng-switch-when="2" class="timer-type2">
         <div class="timer-display-wrapper">
             <div class="timer-display"></div>
-            <div class="seconds-text" translate="TIMER.SECONDS"></div>
+            <div class="seconds-text" translate="TIMER.SECONDS" ng-if="!config.hideSecondsText"></div>
         </div>
         <div round-progress
              current="timeElapsed"
