--- a/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
+++ b/src/components/znkAudioPlayer/templates/znkImageAudio.template.html
@@ -7,7 +7,7 @@
             switch-init="audioPlayer.currState"
             source="source"
             on-ended="onEnded()"
-            on-start="d.showSkipButtonFn()"
+            on-start="d.onPlayerStart()"
             allow-replay="allowReplay()"
             show-as-done="showAsDone"
             auto-play="autoPlayGetter()">
