--- a/src/components/znkSession/scss/_znk-session.scss
+++ b/src/components/znkSession/scss/_znk-session.scss
@@ -11,6 +11,9 @@ znk-session {
         text-transform: none;
         outline: none;
     }
+    .end-session{
+        background-color: #FF6766;
+    }
 }
 
 .start-session-modal {
