--- a/src/components/znkSession/modals/templates/startSession.template.html
+++ b/src/components/znkSession/modals/templates/startSession.template.html
@@ -1,16 +1,45 @@
-<div class="start-session-modal">
-    <md-dialog class="base" translate-namespace="ZNK_SESSION">
-        <md-dialog-content>
-            <div class="main-title" translate=".SESSION_SUBJECT"></div>
-            <div class="sessions-types">
-                <div class="session-icon-wrap"
-                     ng-repeat="subject in vm.sessionSubjects"
+<!--<div class="start-session-modal">-->
+    <!--<md-dialog class="base" translate-namespace="ZNK_SESSION">-->
+        <!--<md-dialog-content>-->
+            <!--<div class="main-title" translate=".SESSION_SUBJECT"></div>-->
+            <!--<div class="sessions-types">-->
+                <!--<div class="session-icon-wrap"-->
+                     <!--ng-repeat="subject in ::vm.sessionSubjects"-->
+                     <!--ng-class="subject.name"-->
+                     <!--ng-click="vm.startSession(subject); vm.closeModal();">-->
+                    <!--<svg-icon name={{subject.iconName}}></svg-icon>-->
+                    <!--<span>{{subject.name}}</span>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</md-dialog-content>-->
+    <!--</md-dialog>-->
+<!--</div>-->
+
+<div class="session-dialog">
+    <md-dialog class="base base-border-radius session-container" translate-namespace="ZNK_SESSION">
+        <div class="top-icon-wrap">
+            <div class="top-icon">
+                <div class="round-icon-wrap">
+                    <svg-icon name="znkSession-start-lesson-popup-icon"></svg-icon>
+                </div>
+            </div>
+        </div>
+        <div class="popup-header"></div>
+        <md-dialog-content class="session-content">
+            <div class="main-title" translate=".START_SESSION"></div>
+            <div class="sub-title" translate=".SESSION_SUBJECT"></div>
+            <div class="subjects-btns">
+                <button class="subject-icon-wrap"
+                     ng-repeat="subject in ::vm.sessionSubjects"
                      ng-class="subject.name"
                      ng-click="vm.startSession(subject); vm.closeModal();">
                     <svg-icon name={{subject.iconName}}></svg-icon>
                     <span>{{subject.name}}</span>
-                </div>
+                </button>
             </div>
         </md-dialog-content>
     </md-dialog>
 </div>
+
+
+
