--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -58,6 +58,8 @@ $bgColor34 : #252525;
 $bgColor35 : #037684;
 $bgColor36 : rgba(255, 255, 255, 0.8);
 $bgColor37 : #76b63e;
+$bgColor38 : #AF89D2;
+$bgColor39 : #F3CF19;
 
 //border color
 $bcColor1: #87ca4d;
