cleaning activePanel component adding autoCall to calls component add extend lesson time fn and modal

--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -134,7 +134,7 @@ active-panel {
                 }
             }
         }
-        .call-duration {
+        .live-session-duration {
             @include text-style(12px, $fcColor13, Lato, $regularFontWeight);
         }
     }
