--- a/src/components/calls/directives/callBtn/_call-btn-drv.scss
+++ b/src/components/calls/directives/callBtn/_call-btn-drv.scss
@@ -4,6 +4,7 @@ call-btn {
         background: none;
         border: none;
         padding: 0;
+        outline: none;
         svg-icon {
             &.etutoring-phone-icon {
                 width: 25px;
