--- a/src/components/znkSession/components/sessionBtn/sessionBtn.template.html
+++ b/src/components/znkSession/components/sessionBtn/sessionBtn.template.html
@@ -1,13 +1,8 @@
-<md-button class="session-btn"
-           ng-click="vm.showSessionModal()"
-           ng-if="!vm.isLiveSessionActive">
-    <span>{{'ZNK_SESSION.START_SESSION' | translate}}</span>
-</md-button>
 
-<md-button class="session-btn"
-           ng-class="{'end-session': vm.isLiveSessionActive}"
-           ng-click="vm.endSession()"
-           ng-if="vm.isLiveSessionActive">
-    <span>{{'ZNK_SESSION.END_SESSION' | translate}}</span>
+<md-button class="session-btn" ng-disabled="vm.isOffline"
+           ng-class="{'offline': vm.isOffline, 'end-session': vm.isLiveSessionActive}"
+           ng-click="!vm.isLiveSessionActive ? vm.showSessionModal() : vm.endSession()">
+    <span ng-if="!vm.isLiveSessionActive">{{'ZNK_SESSION.START_SESSION' | translate}}</span>
+    <span ng-if="vm.isLiveSessionActive">{{'ZNK_SESSION.END_SESSION' | translate}}</span>
 </md-button>
 
